020.co.uk (archived on 2002-06-01)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 496,
  "classifier_probability": 0.74,
  "cross_domain_homepage_redir": false,
  "flesch_ease": null,
  "flesch_kincaid": NaN,
  "homepage_snapshot_redirected_domain": "020.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020331035038id_/http://www.020.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020331035038id_/http%3A//020.co.uk",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "020.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020601150134id_/http%3A//www.020.co.uk/privacy.html",
  "policy_title": "020 London - Privacy Policy",
  "policy_url": "020.co.uk/privacy.html",
  "sha1": "b95e204b1df96b082d0b2820985f5df5f412e463",
  "simhash": 6521755412902286252,
  "simhash_updated": true,
  "site_hostname": "020.co.uk",
  "site_url": "http://020.co.uk",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20020601150134",
  "word_count": 79,
  "year": 2002
}

--- a/0/02/020/020.co.uk.md
+++ b/0/02/020/020.co.uk.md
@@ -1,29 +1,9 @@
-> *The following text is extracted and transformed from the 020.co.uk privacy policy that was archived on 2000-12-16. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20001216173100id_/http%3A//020.co.uk/020/common/privacy.html) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the 020.co.uk privacy policy that was archived on 2002-06-01. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20020601150134id_/http%3A//www.020.co.uk/privacy.html) for the most accurate reproduction.*
 
-# privacy policy - 020
+# 020 London - Privacy Policy
 
-[ ](https://web.archive.org/web/20001216173100id_/http%3A//020.co.uk/index.html) |  |  **privacy policy**
+**Information Collected** For each visitor to our web pages, our web server automatically recognises only the ISP domain name and IP address of the visitor, we do not trap email addresses 
 
-**020** is committed to privacy. We want you to use our service and we want you to be confident that in doing so any information you give to us will be kept private. We therefore commit to the following information gathering and dissemination practices for **020**. 
+We only collect email addresses of those who communicate with us via email and information volunteered, such as site registrations/submissions 
 
-**Use of Personal Information**
-
-**020** has access to information about you from the initial subscription form, which collects contact and demographic information. Contact information, such as your name and email address, is used for system administration and for contacting you when necessary. Demographic information, such as age group, is used to better target the delivery of advertisements. Our advertisers submit advertisements to us and specify the intended audience; **020** then tries to display the advertisements to **020** users who meet the advertiser's criteria. 
-
-You can check and update the information held about you in the Personal Details section of **020**. 
-
-**Use of Cookies**
-
-A cookie is a small data file that a webserver writes to the user's computer. A cookie can contain information such as a user ID that the website then uses to track the pages you've visited. However the only personal information that a cookie can contain is information supplied by yourself. A cookie can't read data off your hard drive or read cookie files created by other sites. 
-
-**020** uses cookies to allow access to your email account. When you log in, **020** writes your username into a cookie along with a security algorithm. The server then reads the cookie to ensure you only have access to your own data and emails. 
-
-**020** cookies are only "temporary cookies". This means that rather than being written to the hard drive of the user's computer as in the case of some cookies, **020** cookies are only stored in the computer's memory. The cookie therefore "expires" when you log out from the service, or when you shut down your browser. 
-
-|  |  [about](https://web.archive.org/020/common/about.html)  
-[features](https://web.archive.org/020/common/features.html)  
-[subscribe](http://www.020.co.uk/form.html)  
-[faq](https://web.archive.org/020/common/faq.html)  
-[privacy](https://web.archive.org/020/common/privacy.html)  
-[login](https://web.archive.org/index.html)  
-
+The information we collect is used to improve the content of our web pages and under no circumstances is it shared with other organisations for commercial purposes 
