f9.co.uk (archived on 2002-06-03)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 3677,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.52,
  "homepage_snapshot_redirected_domain": "f9.net.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020208135325id_/http://portal.f9.net.uk/index.html",
  "homepage_snapshot_url": "https://web.archive.org/web/20020328015134id_/http%3A//f9.co.uk",
  "interval": "2002_A",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "f9.net.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020603054834id_/http%3A//portal.f9.net.uk/info2/legal/privacy.html",
  "policy_title": "[ Force9 ] - Adding Value to the Internet",
  "policy_url": "portal.f9.net.uk/info2/legal/privacy.html",
  "sha1": "ec59a06c9ef637aa3bb39f846d78565bda67747d",
  "simhash": 9964828820296399459,
  "simhash_updated": true,
  "site_hostname": "f9.co.uk",
  "site_url": "http://f9.co.uk",
  "smog": 12.86,
  "strict_updated": true,
  "timestamp": "20020603054834",
  "word_count": 601,
  "year": 2002
}

--- a/f/f9/f9./f9.co.uk.md
+++ b/f/f9/f9./f9.co.uk.md
@@ -1,13 +1,8 @@
-> *The following text is extracted and transformed from the f9.co.uk privacy policy that was archived on 2001-11-01. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20011101170316id_/http%3A//www.f9.co.uk/info/legal/privacy.html) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the f9.co.uk privacy policy that was archived on 2002-06-03. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20020603054834id_/http%3A//portal.f9.net.uk/info2/legal/privacy.html) for the most accurate reproduction.*
 
 # [ Force9 ] - Adding Value to the Internet
 
-  
-  | [](https://web.archive.org/web/20011101170316id_/http%3A//www.f9.co.uk/info/legal/index.html) |  | [](https://web.archive.org/web/20011101170316id_/http%3A//www.f9.co.uk/info/legal/aup.html) |  | [](https://web.archive.org/web/20011101170316id_/http%3A//www.f9.co.uk/info/legal/privacy.html) |  | [](https://web.archive.org/web/20011101170316id_/http%3A//www.f9.co.uk/info/legal/security.html) |  | [](https://web.archive.org/web/20011101170316id_/http%3A//www.f9.co.uk/info/legal/data_protection.html) |  | [](https://web.archive.org/web/20011101170316id_/http%3A//www.f9.co.uk/info/legal/glossary.html) |    
----|---|---|---|---|---|---|---|---|---|---|---|---  
-  
-**  
-Privacy Policy statement**
+**Privacy Policy statement**
 
 Your right to privacy is very important. We recognize that when you choose to provide us with information about yourself, you trust us to act in a responsible manner. We believe this information should only be used to help us provide you with better service. That's why we have put a policy in place to protect your personal information. Below is a summary of our policy. 
 
@@ -33,13 +28,12 @@ Our websites may provide links to third party sites. Since we do not control tho
 
 Force9 websites use cookies for various reasons. Cookies enable us to provide you with a better experience by allowing us to understand what areas of the website are of interest to our visitors. These cookies do not track individual information. Force9 also uses cookies when you register for one of our web programs. In this situation, a cookie will store useful information that enables our website to remember you when you return to visit us. Cookies from Force9 websites can only be read by Force9 websites. 
 
-**  
-Data storage**
+**Data storage**
 
 Many of our websites that collect information will store and process that information in databases. 
 
-_How can you update the personal information you have provided to Force9?_  
-You can help Force9 maintain the accuracy of your information by notifying Force9 of any changes to your address, title, phone number or e-mail address. You may do this online or through customer support by following the instructions on the "manage my account" pages.
+_How can you update the personal information you have provided to Force9 ?_  
+You can help Force9 maintain the accuracy of your information by notifying Force9 of any changes to your address, title, phone number or e-mail address. You may do this online or through customer support by following the instructions on the "My Force9 " pages.
 
   
 **Questions?**
@@ -56,3 +50,5 @@ Sheffield
 S4 7YA
 
 back to top of page
+
+If you have any questions about Force9's range of Internet access products, our sales team will be pleased to help you. Call us today on **0845 140 0250**
