k12.com (archived on 2004-12-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 10964,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.19,
  "homepage_snapshot_redirected_domain": "k12.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001084313id_/http://www.k12.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001084313id_/http%3A//k12.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "k12.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041206152135id_/http%3A//www.k12.com/support/privacy.html",
  "policy_title": "K12 : Privacy Policy",
  "policy_url": "k12.com/support/privacy.html",
  "sha1": "190489c7517f458ea836dc4dae0eb58dd510f059",
  "simhash": 11546931587179026792,
  "simhash_updated": true,
  "site_hostname": "k12.com",
  "site_url": "http://k12.com",
  "smog": 16.16,
  "strict_updated": true,
  "timestamp": "20041206152135",
  "word_count": 1835,
  "year": 2004
}

--- a/k/k1/k12/k12.com.md
+++ b/k/k1/k12/k12.com.md
@@ -1,95 +1,74 @@
-> *The following text is extracted and transformed from the k12.com privacy policy that was archived on 2004-06-02. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20040602232108id_/http%3A//k12.com/support/privacy.html) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the k12.com privacy policy that was archived on 2004-12-06. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20041206152135id_/http%3A//www.k12.com/support/privacy.html) for the most accurate reproduction.*
 
 # K12 : Privacy Policy
 
+|   
+Updated April 30, 2004
+
+K12's unique program combines online technology with traditional content and the world's best teaching methods. We, K12, have established this privacy policy to let you know how we collect and use information that we may gather from you on this website, K12.com, and the websites of our affiliated schools ("affiliates") (these websites collectively are referenced as "Sites" in this policy; all of the Sites are owned and operated by K12). This privacy policy discloses how we collect, use, share, and protect information gathered about you on our Sites. 
+
+This policy only applies to information that we collect through our Sites and does not apply to information that we may collect from you in other ways (for example, this policy does not apply to information that you may provide to us over the phone, by fax or through conventional mail). In addition, please note that this policy does not apply to your children's educational records - those records are protected by the Family Educational Rights and Privacy Act and we at K12 are committed to compliance with that law. 
+
+Non-Personal and Aggregated Information Collected Automatically
+
+Each time you visit our website, we log non-personal information, such as your IP address, domain name, the name of the Web page from which you entered our website, which pages you visit on our website, and how much time you spend on each page. We use this information to monitor and improve our website and for internal analysis. In particular, we use IP addresses to analyze trends, administer the website, and gather information for aggregate use. IP addresses are not linked to personally identifiable information. 
+
+  * Use of Cookies  
+Our website uses "cookies" to help personalize your online experience. A cookie is a text file that is anonymously placed on your hard disk by a web page server. Cookies cannot be used to run programs or deliver viruses to your computer. Cookies are uniquely assigned to you. We use cookies to keep track of how you are using the Sites, to tailor Web content to your interests. If you have registered your children for a K12 virtual program, cookies will speed up and ease your access to the OLS, as defined below, and navigation around the OLS. K12 cookies do not contain personal information about the parent(s) or children enrolled in K12 virtual program. 
+
+We will not share or sell non-aggregated information contained within cookies to any third party. 
+
+You also have the ability to accept or decline cookies. Most web browsers automatically accept cookies, but you can usually modify your browser setting to decline cookies if you prefer. If you choose to decline cookies, you may not be able to fully experience the interactive features of our Sites or have some of our services on the Sites function properly. If you choose to decline cookies, you will not be able to access the OLS or have your children enrolled in a virtual program. 
+
+
+
+
+Personal Information You Provide  
+You can use portions of our Sites without divulging any personal information including your email address. Our Sites do not collect personal information about individuals except when such individuals specifically provide such information on a voluntary basis, for example when a you request a catalog, request additional information by contacting us, posts a message to a message board, request help, or access and add to or change the information on your account information page on the OLS. When you register your children for a K12 virtual program or participate in a K12 virtual program through an affiliate or local school we may collect information regarding you and your children but all such information will be collected over the phone, by fax or through conventional mail. Once you have registered your children for a K12 virtual program, there is an online service for all such programs (collectively the "OLS"). There will be a personal information page on the OLS that contains some or all of your personal information. You may also be assigned a Member ID and password and may create, at your discretion, a Member ID for your children any time you are logged on to the OLS. The Member ID will be used to recognize you and your children on the OLS portion of the K12 Site. The Member ID will allow K12 to recognize: your first and last name; registration ID; type of account, such as teacher, administrator, parent or student (if you created a separate Member ID and password for your children); school affiliation or the K12 virtual program in which your children are enrolled; integration number; and the e-mail address you provided. The Member ID and the OLS will also allow you to track your children's attendance, school work and testing and to submit relevant portions of same to K12, its affiliates and/or your local school to track your children's progress and abide by State and/or Federal standards and regulations.  
+K12, its affiliates, and/or your local school may use personal information provided by you on your account information page on OLS to contact you about your children's progress, testing or attendance, customer service and quality control procedures. To the extent third party vendors assist K12 and/or its affiliates in the provision of online products or services, those vendors are provided the minimum amount of data required to perform the tasks for which they have been engaged, have no independent rights to such data, and have agreed to adhere to the K12 Privacy Policy. 
+
+K12 may use the personal information on your account information page on OLS to provide you with information about new products and services available through K12. You can request to opt out of receiving such information by making a request in writing to [privacy@K12.com](mailto:privacy@K12.com)
+
+K12 may share your information with companies that are not affiliated with K12 but who are interested in sending you information about their products and services. You can request to opt out of the sharing of your personal information to independent third parties by making a request in writing to [privacy@K12.com]. 
+
+You can review, edit, and delete the personal information that you have provided to K12 by making changes to your account information page on the OLS or making a request in writing to [privacy@K12.com](mailto:privacy@K12.com), as applicable. Please be advised that if your children are enrolled in a K12 virtual program, the deletion of certain of your personal information may result in your children no longer being able to be enrolled in such program or utilize of the OLS. 
+
+  * Personal Information Provided by Parents About Children  
+We understand that our student users who are under 13 years of age need special safeguards and privacy protection and it is our intent to fully comply with the Children's Online Privacy Protection Act (COPPA). K12 does not collect personal information from children online at any point. K12 only receives personal information about your children directly from you when you enroll your children into a K12 virtual program. You can review any personal information that K12 has regarding your children by reviewing your online account information page on the OLS and/or making such a request in writing to [privacy@K12.com](mailto:privacy@K12.com). You can request to opt out your children from the use of personal information by K12, affiliates and vendors acting on behalf of K12, by making a request in writing to [privacy@K12.com](mailto:privacy@K12.com). Please be aware that if you make such a request to opt your children personal information out of use by K12, affiliates or vendors acting on behalf of K12, your children can no longer continue to be enrolled in a K12 virtual program or utilize the OLS. Therefore, a request by you for K12, affiliates and vendors acting on behalf of K12 to no longer use your children's personal information will terminate your children's participation in the K12 virtual program in which they are enrolled and their use of the OLS. 
+
+For information on COPPA and the use of children's personal information, please contact:  
+K12 Inc.  
+8000 Westpark Drive  
+Suite 500  
+McLean, VA 22102  
+1-888-968-7512  
+[privacy@K12.com](mailto:privacy@K12.com)
+
+
+
+
+Message Boards And Chats  
+We may offer K12 message boards and chat rooms to you, the parent(s), on our Sites. Please be aware that anyone may read your postings on a message board or in a chat room. Furthermore, any information which you submit to be posted to a message board or in a chat room, including your information from your account information page and Member ID, will be disclosed and available to all users of that message board or chat room, and is therefore no longer private. We cannot guarantee the security of such information that you disclose or communicate online in public areas such as message boards and chat rooms, and you do so at your own risk. We reserve the right to monitor the content of the message boards only and to republish your postings from message boards or chat rooms elsewhere on the Web or otherwise in any format. 
+
+Links  
+The Sites may contain links to other websites, chat rooms or other resources that we provide for your convenience ("Linked Sites"). These sites are not under the control of K12, and K12 is not responsible for the content available on any Linked Site. Such links do not imply K12's endorsement of material on any Linked Site and K12 expressly disclaims all liability with regard to your access to such Linked Sites. Access to any other websites linked to the Sites is at your own risk. 
+
+Our Commitment To Data Security  
+To prevent unauthorized access, maintain data accuracy, and ensure the correct use of information, we have put in place commercially reasonable physical, electronic, and managerial procedures to safeguard and secure the information we collect. We also use Secure Sockets Layer (SSL) protocol on your account information pages to protect sensitive personal information. 
+
+Changes In Corporate Structure  
+If all or part of K12 Inc. or any of its affiliates are sold, merged or otherwise transferred to another entity the personal information you have provided at these Sites may be transferred as part of that transaction or process. However, K12 will take steps to assure that the personal information is used in a manner consistent with the K12 privacy policy under which it was collected. The Family Educational Rights and Privacy Act protects your children's educational records, in the event of such a transaction or transfer. 
+
+Changes to the Privacy Policy  
+We will occasionally amend this Privacy Policy to reflect company and customer feedback. We reserve the right to change, modify, add or remove portions of this policy at any time, and any changes will become effective immediately upon being posted unless we advise you otherwise. If you have any questions about K12's privacy policy, please contact us in writing at [privacy@K12.com](mailto:privacy@K12.com). 
+
+|  |  |  |  | [](https://web.archive.org/support/index.html)  
+---|---|---  
+|  | [](https://web.archive.org/support/contact.html)  
+|  | [](https://web.archive.org/support/faqs.html)  
+|  |   
+|  | [](https://web.archive.org/support/copyright.html)  
+|  | [](https://web.archive.org/support/sitemap.html)  
+|  | [](https://web.archive.org/support/terms.html)  
   
-At K12, respecting your privacy is an important matter. Accordingly, we will not sell any personal or identifiable information you supply to us. 
 
-Please review the full policy below for more details. If you have questions or concerns regarding our Privacy Policy, e-mail [privacy@K12.com](mailto:privacy@K12.com). 
-
-Collection of Information  
-When you register, we ask for your name, e-mail address, and other profile information, such as credit card and billing information. We may request additional profile information for optional online surveys and identification verification. 
-
-In the course of using our website, we log certain information, including your IP address, the browser you are using, and the previous URL you were visiting. 
-
-We personalize your user experience by delivering content specific to your interests, based on your browsing and message activity. 
-
-If you send us correspondence, such as e-mails or letters, or if other users or third parties send us correspondence about your activities on the website, we may store such information so that we can serve you better. 
-
-Use of Your Information  
-We use profile information to improve our marketing and promotional efforts, review website usage, and improve our website's content, offerings, and layout. 
-
-We may use profile information for market research purposes and to generate aggregate reports on students' interests and behaviors. We will not identify specific individuals in reports. 
-
-With your prior approval, we may use the information we collect to occasionally notify you about new offerings from K12 and special offers we think you will find useful. If you would rather not receive such notices, please contact us at [privacy@K12.com](mailto:privacy@K12.com). 
-
-We use your IP address to help diagnose problems with our server and to administer our website. 
-
-We use your e-mail address, and in some situations, your mailing address or your phone or fax number to contact you when necessary. (For example, an agent of K12 may contact you to ensure you are satisfied with the service.) 
-
-In the absence of a special relationship, we do not pass on your profile information to any third party without your express permission, but we may distribute aggregate information to other parties for marketing and promotional purposes. You cannot be personally identified from this aggregate information. Certain information, such as your password or credit card number, is not disclosed. 
-
-We may occasionally partner with another company. By this we mean that a portion or version of our website is integrated into our partner's website or is integrated with our partner's content or branding. We may agree to share your information with them. However, if we share such information, we do so only under strict confidentiality. 
-
-We may disclose user information in special cases, for example, when we have reason to believe it is necessary to identify, contact, or bring legal action against someone who may be causing injury to or interfering with (either intentionally or unintentionally) K12's rights or property, other K12 users, or anyone who could be harmed by such activities. We may disclose user information when we believe, in good faith, that the law requires it. 
-
-We may set and access cookies on your computer. We use cookies for a number of purposes, including but not limited to the following: providing customized content, keeping track of your preferences, estimating and reporting total K12 website audience size and traffic, and conducting research to improve K12 content and services. 
-
-Notification of Changes  
-If at some point there is a change to our information usage practices that affects your personal or identifiable information, we will notify you by e-mail of the relevant changes. At the time of that message, you will be able to opt out of this information usage by sending an e-mail message to [privacy@K12.com](mailto:privacy@K12.com). You should periodically check our posted privacy statement for changes. 
-
-Control of Passwords  
-You are required to control your password as described in the K12 User Agreement. 
-
-If you have forgotten your password, please contact us at [privacy@K12.com](mailto:privacy@K12.com). Your password will be e-mailed to you shortly thereafter. 
-
-K12 will never ask for your password in an unsolicited phone call or e-mail. 
-
-Security  
-Transmission of information over the Internet cannot be guaranteed to be 100% secure, but some websites take greater precautions than others to protect the privacy and security of their users. While the Internet is not a locked-down environment, K12 places a high premium on security and privacy. 
-
-We use Secure Socket Layers (SSL) to encrypt sensitive data you send to us. Access to our site is password protected. A high-strength firewall protects our database from outsiders. The physical devices running K12 reside in one of the country's most respected hosting location facilities. 
-
-Consent  
-By using our website, you consent to the collection and use of the above-described information by K12. 
-
-Other  
-This site may contain links to other websites; K12 is not responsible for the privacy practices or the content of these sites. 
-
-You have the option to change or modify information previously provided by revising your member profile online or by contacting K12 via e-mail at [privacy@K12.com](mailto:privacy@K12.com). 
-
-While completing the registration form you can choose not to receive the occasional e-mails with special offers and ideas. If you choose yes and later decide you don't want these e-mails, simply contact K12 at [privacy@K12.com](mailto:privacy@K12.com). 
-
-Children's Privacy Policy  
-K12 ordinarily accepts service agreements established by persons over the age of 18. When someone under the age of 18 attempts to register with K12, we ask that he or she have a parent or guardian establish a service agreement in order to obtain parental consent. 
-
-When any user registers for K12's products and services, we require a name, e-mail address, zip code, and credit card information. K12 also asks users to provide other optional information, including gender and date of birth. 
-
-K12 uses this information for research and to create and maintain accounts, and may use this information to customize the advertising and content seen on our pages. 
-
-Under the Children's Online Privacy Protection Act, no website operator can require, as a condition of participation in an activity, that a child under the age of 13 disclose more information than is reasonably necessary. K12 abides by this requirement. 
-
-Information Sharing and Disclosure  
-K12 will not rent or sell children's personal or identifiable information to anyone. 
-
-K12 will not contact children under the age of 13 about special offers or for marketing purposes without parental consent. K12 will send personal or identifiable information about a child to other companies or people under the following conditions: 
-
-  * We have a parent's consent to share the information. Parents have the option of allowing K12 to collect and use their child's information without consenting to K12 sharing this information with other people and companies. 
-  * We need to send the information to companies working on behalf of K12 to provide a product or service that has been requested. Unless we tell you differently, these companies do not have any right to use the personal or identifiable information we provide to them beyond what is necessary to assist us. 
-  * We must respond to subpoenas, court orders, or legal process (to the extent permitted by law). 
-
-Ability to Update or Delete Information  
-Children can update or delete information in their K12 accounts through their Account Information screen. In addition, parents are allowed to review, edit, and delete information related to their child's K12 account at any time. 
-
-If a parent chooses not to allow us to further collect or use their child's information, that parent can send an e-mail to [privacy@K12.com](mailto:privacy@K12.com) to request that the child's account be deleted. 
-
-Please note, however, that even after an account is deleted and the information in no longer in our active user databases, information about a child may remain in back-up storage for some time. 
-
-Legal Notices
-
-Copyright  
-All website design, text, graphics, interfaces, and the selection and arrangements thereof, are the exclusive property of K12 or its content suppliers and are protected by U.S. and other international copyright laws, © 2001 K12, Inc. Any unauthorized use of the materials appearing on the K12 website is in violation of copyright, trademark, and other applicable laws, and could result in criminal or civil penalties. 
-
-"K12" is the exclusive service mark of K12, Inc. K12's service mark may not be used in connection with any product or service that is likely to cause confusion among customers as to the source or quality of the product or service, or in any manner that disparages or discredits K12. All other trademarks, service marks, and logos used on the website are the trademarks, service marks, and logos of their respective owners. 
-
-Do you have a question or comment about this privacy statement or the practices of this website? We welcome your feedback at [privacy@K12.com](mailto:privacy@K12.com). 
