--- a/4/40/407/407etr.com.md
+++ b/4/40/407/407etr.com.md
@@ -1,85 +1,50 @@
-> *The following text is extracted and transformed from the 407etr.com privacy policy that was archived on 2004-06-04. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20040604202214id_/http%3A//www.407etr.com/about/about_privacy.asp) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the 407etr.com privacy policy that was archived on 2004-12-06. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20041206204533id_/http%3A//www.407etr.com/about/about_privacy.asp) for the most accurate reproduction.*
 
 # Welcome to 407 ETR
 
-**407 ETR Policy on Privacy of Customer Personal Information**
+**We respect the privacy and protect the confidentiality of your personal information.**
 
-407 ETR will comply with: (i) Personal Information Protection and Electronic Documents Act ("PIPEDA"), a federally enacted act which protects personal information that is collected, used or disclosed; (ii) other acts which protect personal information and privacy, such as the Highway 407 Act; and (iii) any future provincial protection of privacy legislation as it relates to the rights of customers. For the purposes of this policy, personal information means information about an identifiable individual, but does not include the name, title or business address or telephone number of an employee of an organization. Any reference to a customer within this policy is in reference to personal information and not business information ("Customer").
+The 407 ETR Privacy Policy has been established in accordance with federal privacy legislation (PIPEDA) to inform you about our practices and procedures concerning the collection, use and disclosure of your personal information.
 
-The Canadian Standards Association Model Code ("Code") for the protection of personal information is a national standard that was developed by the Canadian Standards Association. The Code is a central part of PIPEDA. The Code's ten privacy principles are identified in PIPEDA as follows:
+**IMPORTANT POLICY HIGHLIGHTS  
+ _Keeping You Aware and Informed about Your Personal Information._**
 
-407 ETR has implemented policies and procedures to give effect to the principles, including:      1.  | Implementing procedures to protect personal information.  
----|---  
-    2.  | Establishing procedures to receive and respond to complaints and inquiries in connection with the collection, use and disclosure of personal information by 407 ETR.  
-    3.  | Training staff and communicating information to staff about 407 ETR’s policies and procedures.  
-    4.  | Developing information to explain 407 ETR’s policies and procedures to Customers.  
-  
-**2\. Identifying Purpose**  
-407 ETR will identify and document the purposes for which it collects personal information. Only personal information that is necessary for those identified purposes will be collected. If 407 ETR intends to use the personal information that has been collected for a new purpose, this new purpose will be identified and consent for such new purpose will be obtained from the Customer to which the personal information relates prior to using such personal information.
+Thank you for taking the time to read this important policy on how we protect your personal information. 
 
-407 ETR shall only collect, use and disclose personal information about Customers for the following purposes:      a.  | To assist 407 ETR in the collection and enforcement of tolls, fees and other charges owing with respect to Highway 407.  
----|---  
-    b.  | To assist 407 ETR in traffic planning and revenue management with respect to Highway 407.  
-    c.  | To assist 407 ETR in communication with users of Highway 407 for the purpose of promoting the use of Highway 407.  
-    d.  | To assist an entity with whom 407 ETR or the Ministry of Transportation has an agreement relating to the collection and enforcement of tolls in connection with the use of Highway 407.  
-  
-407 ETR **does not** collect and use personal information about Customers for the following purposes:      a.  | To sell Customer lists to third party agencies.  
----|---  
-    b.  | To issue speeding tickets by law enforcement agencies.  
-  
-Customer inquiries regarding the purposes for the collection, use and disclosure of personal information will be addressed by 407 ETR or referred to the Privacy Officer.
+Just as 407 ETR is unique from any other highway in Canada, we are also different from many businesses you choose to deal with –like your financial institution, insurance company, public utility or a credit card company. That’s because with those companies, you need to call or sign-up with them and provide your pertinent personal information before you are provided any product or service.
 
-**3\. Consent**
+As a state-of-the-art, open access electronic toll highway legislated to provide service under the Highway 407 Act, when you choose to travel 407 ETR, you consent to the retrieval of your personal information as the registered owner of the vehicle plate, by use of the highway. This information is supplied to us from the Ministry of Transportation (MTO) to bill you for use of the 407 highway and collect payment. In fact, we are required – by law – to use your personal information for this purpose. 
 
-The knowledge and consent of Customers is required for the collection, use or disclosure of personal information, except when inappropriate, including where permitted or required by law. 407 ETR will seek consent for the collection of personal information at the time of collection, wherever possible. 407 ETR will make a reasonable effort to ensure that Customers are advised of the purposes for which the personal information being collected will be used, and will state the purposes in a manner that will allow Customers to reasonably understand how their personal information will be used or disclosed by 407 ETR. 
+407 ETR cannot and does not sell your personal information to any other company or organization to promote their products or services. We only disclose your personal information, should it be necessary, to limited third parties (such as a collection agency) who must also abide with this agreement, so as to administer or collect payments on behalf of 407 ETR.
 
-Consent may be obtained in a variety of ways, for example, through an application form, orally by telephone or by electronic media, depending on the circumstances and the type of personal information being collected, and in particular, on the sensitivity of the personal information. The reasonable expectations of Customers will be considered when obtaining consent. For example, where Customers provide their names and addresses for mailing and billing purposes, they should reasonably expect that this information would also be used for sending out Customer Satisfaction Surveys, where the choice to respond is the Customers’. 
+It’s important to note that account set up at 407 ETR revolves around a vehicle plate entering and exiting the highway. Once a trip has been recorded with your vehicle plate, we then collect your personal information from the Ministry of Transportation and establish an account for you. A 407ETR bill account is always set up in the name and address of the vehicle plate owner, regardless of who drives the vehicle at the time of the recorded trip(s).
 
-In certain circumstances, personal information can be collected, used or disclosed without the knowledge or consent of the Customer. For example, legal, medical or security reasons may make it impossible or impractical to seek consent. Seeking consent may be impossible or inappropriate when there is an emergency threatening the Customer's life, health or security, or where the Customer is a minor, seriously ill or mentally incapacitated.
+Similarly, if you wish to have someone other than yourself (vehicle plate owner) to have access to all information on your account (such as a spouse or relative that manages your bills), please contact us to have this person(s) added to your account record as an alternate account holder.
 
-Although information may be publicly available, 407 ETR will treat this in accordance with PIPEDA principles. Moreover, 407 ETR may provide personal information to its lawyers, advisors, agents and/or third parties to collect a debt, comply with a subpoena, warrant or other court order, to a government institution requesting the information upon lawful authority, or as may be otherwise required by law. In all cases, proper internal authorization for disclosure procedures will be followed.
+You can have your personal information deleted from our records – if evidence demonstrates that a vehicle plate registered in your name has not travelled 407 ETR – by contacting us in writing and include your name, address and 407 ETR account number.
 
-The use of Highway 407 will be considered consent to collect, use and disclose personal information for stated purposes.
+**6\. Accuracy**
 
-The Customer's consent for the collection, use and disclosure of personal information is also obtained by 407 ETR as follows:
+We encourage you to review and confirm the accuracy of all personal information provided to us. If you find errors or if changes are required to this information, we urge you to immediately contact 407ETR, as listed at the end of this Policy guide. We will make the appropriate changes and update your records accordingly. 
 
-  * When Customers execute Transponder Lease and Consolidation Agreements.
-  * When an invoice is sent to the Customer for use of the Highway 407
-
-
-
-Copies of the 407 ETR Privacy Policy will be published on the 407 ETR Website at www.407etr.com and also made available in 407 ETR published brochures.
-
-Consent may be withdrawn by a Customer by providing reasonable notice to 407 ETR to the Privacy Officer. 407 ETR will inform the Customer of any implications of such a withdrawal. Any withdrawal of consent will still allow 407 ETR to use and disclose a Customer's personal information in order to collect or enforce payment of amounts owing as a result of a Customer's previous or continuing use of Highway 407.
-
-Subsequent use of Highway 407 will automatically provide consent for the collection, use, disclosure and retention of personal information. 
-
-**5\. Limiting Use, Disclosure & Retention**
-
-407 ETR will not use or disclose personal information for purposes other than those for which it was collected, except with the consent of the Customer or as required by law. Personal information cannot be used or passed on in a manner inconsistent with the identified purpose.
-
-407 ETR may disclose a Customer's personal information to third parties retained by 407 ETR for the purposes of billing such a Customer for the use of Highway 407 and to collect and enforce payment of amounts owing by such Customers.
-
-Certain 407 ETR employees may be given access to a Customer's personal information collected by 407 ETR in so far as their duties require access for the purposes outlined. 407 ETR employees are governed by a non-disclosure agreement prohibiting disclosure or use of any confidential or personal information for any purposes other than the stated purposes.
-
-Personal information that has been used to make a decision about a Customer will be retained in accordance with the 407 ETR document retention guidelines. Personal information that is no longer required will be destroyed, erased or made anonymous. 407 ETR retains personal information of a Customer only for as long as it is required for 407 ETR's business purposes or as required by federal and provincial laws.
+In addition, and by law, you must provide the Ministry of Transportation with a change of address notice within 6 days of moving. Automatic updates are not provided to 407ETR from the Ministry of Transportation. To ensure prompt billing, we also require you to forward this important information to us.
 
 **9\. Individual Access**
 
-407 ETR will inform a Customer of the existence, use and disclosure of their personal information (including to third parties) and will provide access to that personal information, upon written request. 407 ETR will assist a Customer in the preparation of a request for access when such a Customer requests assistance. 407 ETR will inform the Customer whether or not it holds personal information about them, and will indicate the source of any such personal information, when possible.
+407 ETR will give customers access to the Personal Information it retains within a reasonable time, upon written request with satisfactory identification. You also have the right to know of the existence, use and disclosure of your Personal Information. We may charge a nominal fee for responding to any request, and if so, we will give you notice in advance of the costs associated for processing your request.
 
-There may, however be situations in which 407 ETR will not be able to provide access to all the personal information that it holds about a Customer, although these situations will be limited and specific, and permitted or required by law. For example, 407 ETR will not be able to provide access to a the Customer's personal information where giving such access would likely reveal personal information about a third party, unless that third party's personal information can be severed from the Customer's personal information. If 407 ETR refuses a request for access, the Customer will be informed in writing of the refusal, setting out the reasons for the refusal and informing the Customer of their recourse.
+If we deny a request for access to your Personal Information, we will advise you in writing of the reason(s) for the refusal and you may then challenge our decision. Some examples of the reasons why we may not be able to provide you with access to your Personal Information include:
 
-407 ETR will require that Customers requesting access to their personal information will provide the appropriate verification information required to obtain access to such personal information. This information will not be used for any purpose other than to permit 407 ETR to provide an account of the existence, use and disclosure of the Customers' personal information.
+  * where providing access would likely reveal Personal Information about a third party
+  * where the information cannot be disclosed for legal, security, or commercial proprietary reasons, or
+  * where the information is subject to solicitor-client or litigation privilege
 
-407 ETR will be as specific as possible in providing an account of third parties to which personal information has been disclosed, and will provide a list of organizations to which personal information may have been disclosed when it is not possible to provide a list of the organizations to which specific personal information have actually been disclosed.
 
-407 ETR will respond to a the Customer's request to access their personal information within a reasonable time, and not later than 30 days after receipt of the request. 407 ETR may be entitled to a 30 day extension to respond, in limited circumstances, in which case the Customer will be notified of such an extension, the new time limit, the reasons for extending the time limit, and their right to make a complaint to the Privacy Commissioner with respect to the extension.
 
-407 ETR may charge a reasonable fee for responding to a request. This fee will be determined based on the request and any request specific administrative or system costs that may be incurred, and will advise the Customer, in advance, of the approximate cost. The personal information requested would be provided in a form that is generally understandable.
+If you have any questions, concerns, or problems regarding how 407 ETR protects the privacy of your Personal Information, please contact us. Our Customer Service Representatives will be pleased to explain your options. 
 
-A Customer will be able to challenge the accuracy and completeness of the personal information and have it amended as appropriate. Depending upon the nature of the personal information challenged, amendment may involve the correction, deletion or addition of information, and the amended information will be transmitted to third parties having access to the personal information, where appropriate. In some circumstances, the Customer will be referred to a third party to amend their information, for example the Ontario Ministry of Transportation.
+If you have any questions about this Policy, or how a request for information was handled, please contact the 407ETR Privacy Office at: Customer Advocacy & Privacy Office 6300 Steeles Avenue West, Woodbridge Ontario, Canada L4H 1J1 
 
-When a Customer's challenge to the accuracy and completeness of their personal information is not resolved to their satisfaction, 407 ETR will record the unresolved challenge and will transmit the existence of the unresolved challenge to third parties who have access to the personal information, where appropriate.
+Any changes to the 407 ETR Privacy Policy and information handling practices and procedures shall be acknowledged in the Privacy Policy in a timely manner. 
 
-If you have any questions or comments about this Privacy Policy or you feel that your concerns or complaints have not been resolved to your satisfaction, please contact us 
+407 ETR may add, modify or remove portions of this policy when it is appropriate to do so. 
