j-14.com (archived on 2004-12-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;entertainment",
  "char_count": 13089,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.48,
  "homepage_snapshot_redirected_domain": "j-14.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040929073604id_/http://www.j-14.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040929073604id_/http%3A//j-14.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "j-14.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041207055835id_/http%3A//www.j-14.com/privacy_policy.asp",
  "policy_title": "J-14 Magazine",
  "policy_url": "j-14.com/privacy_policy.asp",
  "sha1": "0e0484634ef46158acc977ed3bc85ccf96dc7690",
  "simhash": 17136223427336499647,
  "simhash_updated": false,
  "site_hostname": "j-14.com",
  "site_url": "http://j-14.com",
  "smog": 13.56,
  "strict_updated": true,
  "timestamp": "20041207055835",
  "word_count": 2262,
  "year": 2004
}

--- a/j/j-/j-1/j-14.com.md
+++ b/j/j-/j-1/j-14.com.md
@@ -1,9 +1,9 @@
-> *The following text is extracted and transformed from the j-14.com privacy policy that was archived on 2004-06-02. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20040602200150id_/http%3A//j-14.com/privacy_policy.asp) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the j-14.com privacy policy that was archived on 2004-12-07. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20041207055835id_/http%3A//www.j-14.com/privacy_policy.asp) for the most accurate reproduction.*
 
 # J-14 Magazine
 
   
-We know that safeguarding your privacy is serious business. Your privacy is very important to us. Please take a moment to read J14's policy so that you understand how we collect and use your personal information. As we update and expand our services, this policy might change, so please check it out from time to time. If you have questions about our privacy policy, please E-mail us at [j14mag@aol.com.](mailto:j14mag@aol.com)   
+We know that safeguarding your privacy is serious business. Your privacy is very important to us. Please take a moment to read J14's policy so that you understand how we collect and use your personal information. As we update and expand our services, this policy might change, so please check it out from time to time. If you have questions about our privacy policy, please E-mail us at [mailbag@j14.com.](mailto:mailbag@j14.com)   
 Remember, if you sign up for any of J14's services or enter any of our contests or sweepstakes, you agree to the terms of this Policy. 
 
 **What types of personal information does J14.com collect?**   
@@ -52,10 +52,10 @@ Except as otherwise described in this Policy, we do not knowingly collect or use
 J14.com does not sell or disclose personal information collected from children under 13 to third parties under any circumstances. 
 
 **How can a parent or guardian review this personal information collected from children under 13?**   
-Parents have the right to review all personal information about children under 13 collected by J14.com, can ask J14.com to delete the information, and can refuse to permit J14.com to collect or use the child's information in the future. If a parent or guardian wishes to review a child's personal information or ask J14.com to delete that information, they should contact J14 at the address and telephone number listed below, or send an E-mail request to j14mag@aol.com. We will verify the identity of the parent or guardian before allowing them to review a child's personal information. 
+Parents have the right to review all personal information about children under 13 collected by J14.com, can ask J14.com to delete the information, and can refuse to permit J14.com to collect or use the child's information in the future. If a parent or guardian wishes to review a child's personal information or ask J14.com to delete that information, they should contact J14 at the address and telephone number listed below, or send an E-mail request to mailbag@j14.com. We will verify the identity of the parent or guardian before allowing them to review a child's personal information. 
 
 **How can you correct or update your information?**   
-If you would like to correct or update information that you have previously provided to J14.com, you can let us know by sending us an E-mail at [j14mag@aol.com.](mailto:j14mag@aol.com) or mailing a letter to our postal address listed below. 
+If you would like to correct or update information that you have previously provided to J14.com, you can let us know by sending us an E-mail at [mailbag@j14.com.](mailto:mailbag@j14.com) or mailing a letter to our postal address listed below. 
 
 **How can you contact J14.com?**   
 If you have any questions about our privacy policy, the practices of this site, or want to reach us for any other reason, you can contact us at:   
@@ -64,4 +64,4 @@ J14
 Englewood Cliffs, NJ 07632   
 (201) 569-6699   
 or E-mail us at:   
-[j14mag@aol.com.](mailto:j14mag@aol.com)
+[mailbag@j14.com.](mailto:mailbag@j14.com)
